--- a/Quiz4.qmd
+++ b/Quiz4.qmd
@@ -9,7 +9,7 @@ format:
 ## Task
 ::: {.callout-note title="Study Information."}
 
-The data was collected by the Sustainable Development Policy Institute (SDPI), which is a non-profit think tank in Pakistan. The data was made accessible on [Open Now Pakistan](https://opendata.com.pk/dataset/district-profiles-all-districts-of-pakistan). [This Kaggle dataset](https://www.kaggle.com/datasets/alikhan83/pakistan-district-profile) extracted the data from here, and merged all the data across districts so that each district was an observation in the file. 
+The data was collected by the Sustainable Development Policy Institute (SDPI), which is a non-profit think tank in Pakistan. The data was made accessible on [Open Now Pakistan](https://opendata.com.pk/dataset/district-profiles-all-districts-of-pakistan). [This Kaggle dataset](https://www.kaggle.com/datasets/alikhan83/pakistan-district-profile) extracted the data from Open Now Pakistan, and merged all the data across districts so that each district was an observation in the file. 
 
 :::
 
@@ -57,9 +57,9 @@ districts <- dplyr::select(districts, doctors, poverty,
 
 Your task is to model the number of doctors in Pakistan based on poverty levels.
 
-- **districts:** Information about different geographic districts of Pakistan. This was taken from Kaggle (1), which extracted the data from Open Data Pakistan (2).
+- **districts:** Information about different geographic districts of Pakistan. Dataset was taken from Kaggle (1), which extracted the data from Open Data Pakistan (2).
   - *doctors*, the number of doctors in a district. Our response variable.
-  - *pop*, the size of the pop force.
+  - *pop*, population count
   - *poverty*, a poverty index
   - *province*, a larger geographic region. Just like each state has multiple cities in the US, each province has multiple districts in Pakistan. This will be useful in visualizing how numbers vary across provinces.
   
@@ -76,13 +76,18 @@ ggplot(pakistan) +
   geom_sf() +
   geom_label_repel(
     aes(label = shapeName, geometry = geometry),
-    stat = "sf_coordinates",  # computes centroids for label placement
+    stat = "sf_coordinates",
     size = 3,
     box.padding = 0.3,
-    label.size = 0.2,        # border thickness of white box
-    label.r = unit(0.15, "lines"),  # corner radius
-    fill = "white",           # box background color
-    color = "black"           # text color
+    label.size = 0.2, 
+    label.r = unit(0.15, "lines"),
+    fill = "white",   
+    color = "black"
+  ) +
+  labs(
+    title = "Map of Pakistan",
+    x = "Latitude (in degrees)",
+    y = "Longitude (in degrees)"
   )
 
 ```
@@ -144,10 +149,10 @@ grid.text("District", x = 0.75, y = 0.5,
 
 ```
 
-determined how to do grid nested boxes from this conversation: https://chatgpt.com/c/6807c215-16e8-8008-a4ee-e24c79226624 
+\newpage
 
 
-
+## Questions: Student Turn
 
 **Question 1: Make a visualization highlighting number of doctors in each of Pakistan's 7 provinces. What do you notice? Optional: Feel free to find geographic identification data online, if you're interested n creating a map visual.**
 
@@ -206,7 +211,7 @@ ggplot(pak) +
 
 Things to notice: 
 
-  - Missing data: Dark grey is the default when there is an NA for the number of doctors in a province. We don't have information for number of doctors in a couple of provinces. Not Punjab is dark gray as well as Gilgit Baltistan and Islamabad Capital Territory.
+  - Missing data: Dark grey is the default when there is an NA for the number of doctors in a province. We don't have information for number of doctors in a couple of provinces. Punjab is dark gray as well as Gilgit Baltistan and Islamabad Capital Territory.
 
   - Number of Doctors: The blue shading helps shed light into number of doctors with lighter blue representing more doctors. There are the highest number of doctors in KPK and Sindh. 
 
@@ -250,7 +255,7 @@ To correct for this, it may be useful to either utilize negative binomial regres
 
 **Question 4: Could an offset be useful in our goal to analyze covariates related to number of doctors?**
 
-An offset is useful because more populous areas naturally have more doctors; thus, we use pop force size as the offset.
+An offset is useful because more populous areas naturally have more doctors; thus, we use population size as the offset.
 
 \newpage
 **Question 5: Depending on your answer for question 2, fit a model using either the regular Poisson (without inflating standard errors) or the negative binomial. Make a choice to include an offset depending on question 4. Your model should incorporate the covariate poverty. If you do include an offset, remember that log(0) is undefined and this may mean some data filtering is needed beforehand.**
@@ -274,50 +279,81 @@ tidy(model, conf.int = TRUE) |>
 
 **Question 6: Interpret the effect of poverty. **
 
-The p-value is low. For each increase in the poverty index by one unit, the expected rate of doctors per pop population in a district will change by a multiplicative factor of `{r} exp(-1.54)`. This means we expect the number of doctors to decrease by 78.6% for each point increase in poverty index. 
+The p-value is low. For each increase in the poverty index by one unit, the expected rate of doctors per person in a population in a district will change by a multiplicative factor of `{r} exp(-1.54)`. This means we expect the number of doctors per person in a population to decrease by 78.6% for each point increase in poverty index. 
 
-There are no poverty index values with a one point difference since the poverty index appears to occur between 0 and 1. It may be more meaningful to make interpretations for each 0.1 point increase in the poverty index. For example, the expected rate of doctors per pop population in a district will change by a multiplicative factor of `{r} exp(-1.54*0.1)`. This means we expect the number of doctors to decrease by 14.3% for each 0.1 point increase in poverty index.
+There are no poverty index values with a one point difference since the poverty index appears to occur between 0 and 1. It may be more meaningful to make interpretations for each 0.1 point increase in the poverty index. For example, the expected rate of doctors per person in a population in a district will change by a multiplicative factor of `{r} exp(-1.54*0.1)`. This means we expect the number of doctors to decrease by 14.3% for each 0.1 point increase in poverty index.
 
 ```{r}
 min(loca_new$poverty)
 
 max(loca_new$poverty)
 ```
+\newpage
+**Question 7: Are there obvious level one and level two observational units?**
 
-**Question 7: Create a visualization and summary table to verify or reject the following statement: Districts with public hospitals in Pakistan have more similar doctor-to-pop force ratios than those without public hospitals**
-```{r}
+
+The level one observational unit is a district and the level two observational unit is the province. 
+
+\newpage
+
+**Question 8: Create a visualization to explore the following statement: Districts in the same province in Pakistan have more similar doctor-to-population ratios than those in different provinces. Specifically, plot poverty vs the logarithm of doctors-to-population ratio for all observations. Then, make a visualization showing separate plots for each province.**
+
+
+
+```{r message=FALSE}
 districts |>
   mutate(
-    doctor_to_pop = doctors/pop
+    doctor_to_pop = log(doctors / pop)
   ) |>
-ggplot(aes(x = factor(public_hospitals), y = doctor_to_pop)) +
-  geom_boxplot()
+  ggplot(aes(x = poverty, y = doctor_to_pop)) +
+  geom_smooth(method = "lm", se = TRUE, color = "#2C3E50", fill = "#95A5A6") +
+  geom_point(alpha = 0.6, color = "#2980B9") +
+  labs(
+    title = "Poverty and Doctor-to-Population Ratio",
+    subtitle = "Log of doctor-to-population ratio vs. poverty index",
+    y = "Log(Doctors per Person)",
+    caption = "Data source: Open Now Pakistan"
+  ) +
+  theme_minimal(base_size = 14) +
+  theme(
+    plot.title = element_text(face = "bold", size = 18),
+    plot.subtitle = element_text(size = 14, color = "gray40"),
+    axis.title = element_text(face = "bold"),
+    panel.grid.major = element_line(color = "gray85"),
+    panel.grid.minor = element_blank()
+  )
 ```
 
 
-
-**Question 7: Create a visualization and summary table to verify or reject the following statement: Districts in the same province in Pakistan have more similar doctor-to-pop force ratios than those in different provinces.**
-
-```{r}
-districts_two |>
+```{r message=FALSE}
+districts |>
   mutate(
-    doctor_to_pop = doctors/pop
+    doctor_to_pop = log(doctors / pop)
   ) |>
-  ggplot(aes(x = doctor_to_pop)) +
-  geom_histogram() +
+  ggplot(aes(x = poverty, y = doctor_to_pop)) +
+  geom_smooth(method = "lm", se = TRUE, color = "#2C3E50", fill = "#95A5A6") +
+  geom_point(alpha = 0.6, color = "#2980B9") +
+  labs(
+    title = "Poverty and Doctor-to-Population Ratio",
+    subtitle = "Log of doctor-to-population ratio vs. poverty index by district",
+    x = "Poverty Index",
+    y = "Log(Doctors per Person)",
+    caption = "Data source: Open Now Pakistan"
+  ) +
+  theme_minimal(base_size = 14) +
+  theme(
+    plot.title = element_text(face = "bold", size = 18),
+    plot.subtitle = element_text(size = 14, color = "gray40"),
+    axis.title = element_text(face = "bold"),
+    panel.grid.major = element_line(color = "gray85"),
+    panel.grid.minor = element_blank()
+  )+
   facet_wrap(~province)
 ```
 
+\newpage
 
-
-```{r}
-districts_two |>
-  mutate(
-    doctor_to_pop = doctors/pop
-  ) |>
-ggplot(aes(x = province, y = doctor_to_pop)) +
-  geom_boxplot()
-```
+**Question 9: Fit the multilevel version of the same model that takes into account the variation that occurs across provinces.**
 
 
 ```{r}
@@ -330,34 +366,26 @@ model <- glmmTMB(
 tidy(model, conf.int = TRUE) |>
   kable(digits = 3)
 ```
+\newpage
+**Question 10: Which estimates are useful for interpretation?**
+
+The fixed intercept and fixed effect of poverty. 
 
 
-
-6. To go a bit extra, it would be great to talk a bit about multi-level models as this seems like a great type of application that could be used for these. You might think about how to integrate a few of these questions if you have time. 
-
-Here are some ideas that might be interesting:
-
-Some initial questions for multi-level models: 
-What are the primary variables considered? 
-What are the level one and level two observational units? 
-What variables are measured at each level? 
-
-Some EDA suggestions, some of which you have already implemented in your assignment: 
-1. Explore general association between the predictor and response variable
-2. Explore whether subjects at a given level of the predictor tend to have similar mean responses
-3. Explore whether variation in response differs at different levels of a predictor
-There are a two main ways we can visualize these associations:
-- A plot of the response versus the predictor for individual observations (meaning treat the observations as independent). 
-- Separate plots of responses versus predictors for each of the level two observations, which is known as a lattice plot. 
-
-Based upon these, can you come up with a proposed composite model and write this out. You may want to guide the student through this and help them with it as we have seen it’s a bit challenging. Focus on some simplicity and a basic approach. 
-
-
+\newpage
 References
 
 
-(1) https://opendata.com.pk/organization/about/sdpi
-
 (1) https://www.kaggle.com/datasets/alikhan83/pakistan-district-profile
 
-(2) https://opendata.com.pk/dataset/district-profiles-all-districts-of-pakistan 
+(2) https://opendata.com.pk/dataset/district-profiles-all-districts-of-pakistan
+
+(3) https://opendata.com.pk/organization/about/sdpi
+
+
+
+*Use of ChatGPT*
+
+ChatGPT was utilized in order to (1) beautify created plots i.e., "Here's my ggplot code, can you beautify this plot?," (2) learn about new plots that exist i.e., use of the grid map to make the visualization of district-province geographical structure and the maps using publicly available GEo IDs,(3) and verify interpretations with the offset and Poisson regression. 
+
+Conversation can be found here https://chatgpt.com/c/6807c215-16e8-8008-a4ee-e24c79226624. 
